--- a/photo-filter/index.html
+++ b/photo-filter/index.html
@@ -38,7 +38,7 @@
       </label>
       <label>
         Hue rotate:
-        <input name="hue" data-sizing="deg" type="range" min="0" max="360" value="0" />
+        <input name="hue-rotate" data-sizing="deg" type="range" min="0" max="360" value="0" />
         <output name="result">0</output>
       </label>
     </div>
@@ -52,7 +52,8 @@
         </label>
         <button class="btn btn-save">Save picture</button>
       </div>
-      <img src="assets/img/img.jpg" alt="image" />
+      <canvas></canvas>
+      <!--<img src="assets/img/img.jpg" alt="image" />-->
     </div>
   </main>
   <footer class="footer">
@@ -63,6 +64,7 @@
       </a>
     </div>
   </footer>
-  <button class="fullscreen openfullscreen"></button>
+  <button class="fullscreen "></button>
 </body>
+<script src="/script.js"></script>
 </html>
